# algorithms-scheduling-simulator

./: CMakeLists.txt  README.md  main.cpp
GUI/: CMakeLists.txt  DataSocket1.h  Makefile  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  datawindow.cpp  datawindow.h  datawindow.ui  eventData.h  graphdialog.cpp  graphdialog.h  graphdialog.ui  graphswindow.cpp  graphswindow.h  graphswindow.ui  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  multSimData.h  mylabel.cpp  mylabel.h  paintwindow.cpp  paintwindow.h  paintwindow.ui  processpropertiesdialog.cpp  processpropertiesdialog.h  processpropertiesdialog.ui  queuedialog.cpp  queuedialog.h  queuedialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  threadsocket.cpp  threadsocket.h  threadsocketvs.cpp  threadsocketvs.h  uiprocess.h
server/: CMakeLists.txt
server/include/: BaseProcess.h  CompleteProcess.h  DataSocket1.h  FinalReport.h  basealgorithm.h  client.cpp  distributions.h  eventData.h  fcfs.h  fifoQueue.h  finalsocket.h  finaltimes.h  iqueue.h  multSimData.h  node.h  priorityQueue.h  processGenerator.h  psjf.h  rr.h  serverSock.h  simulator.h  sjf.h
server/simulator/: Makefile  salida.txt  simulator  simulator.pro
server/src/: BaseProcess.cpp  CompleteProcess.cpp  basealgorithm.cpp  distributions.cpp  finaltimes.cpp  processGenerator.cpp  simulator.cpp  test.cpp  testGenerator.cpp
